--- a/orders/static/orders/css/styles.css
+++ b/orders/static/orders/css/styles.css
@@ -100,3 +100,22 @@ h1, h2, p {
 .footer__text {
     margin-left: auto;
 }
+
+.button {
+    display: block;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #008CBA;
+    color: white;
+}
