--- a/orders/static/orders/css/index.css
+++ b/orders/static/orders/css/index.css
@@ -1,24 +1,13 @@
-.button {
-    display: inline-block;
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
 
-.button:hover {
-    background-color: #008CBA;
-    color: white;
+.lst_button{
+    width: 200px;
+    height: 30px;
 }
 
 .buttons {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
 }
+
