--- a/orders/static/orders/css/register.css
+++ b/orders/static/orders/css/register.css
@@ -43,3 +43,30 @@
     text-transform: uppercase;
     width: 100%;
 }
+
+body {
+  background-color: #e9ecef;
+}
+
+.form-group > label {
+  font-weight: bold;
+}
+
+.form-group > input,
+.form-group > select {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-group > button {
+  margin-top: 1rem;
+}
