--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -6,11 +6,25 @@
     <title>Хороший Магазин</title>
     <link rel="stylesheet" href="{% static 'orders/css/styles.css' %}">
 
+    <link rel="stylesheet" href="{% static 'orders/css/popup.css' %}">
+
+    <script src="{% static 'orders/js/popup.js' %}"></script>
+
+
     {% block head %}
 
     {% endblock %}
 </head>
 <body>
+<!-- Popup window -->
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <p>Вы действительно хотите выйти из профиля?</p>
+        <button class="btn" onclick="hidePopup()">Отмена</button>
+        <a href="{% url 'logout' %}" class="btn">Выйти</a>
+      </div>
+    </div>
+
     <header class="header">
         <a class="header__logo" href="{% url 'index' %}">
             <img src="{% static 'orders/img/logo.png' %}" alt="Логотип Хороший Магазин">
@@ -18,7 +32,7 @@
         </a>
         <div class="header__user">
             {% if user.is_authenticated %}
-                <p class="header__user-fullname">{{ user.get_initials }}</p>
+                <a href="#" onclick="showPopup()"><p class="header__user-fullname">{{ user.get_initials }}</p></a>
             {% else %}
                 <a href="{% url 'login' %}" class="button expand_button">Войти</a>
             {% endif %}
