--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -49,7 +49,7 @@
     <footer class="footer">
         <div class="footer__contacts">
             <p class="footer__phone-number">+7 999 123-45-67</p>
-            <a href="<https://github.com/>" class="footer__link">GitHub</a>
+            <a href="https://github.com/Mikan-DS/SomeStore" class="footer__link">GitHub</a>
         </div>
         <p class="footer__text">© Хороший Магазин, 2023</p>
     </footer>
