--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -13,7 +13,7 @@
                 <a href="{% url 'moderate_orders' %}" class="button lst_button expand_button">Модерировать заказы</a>
                 <a href="{% url 'archive_orders' %}" class="button lst_button expand_button">Заказы в архиве</a>
                 <a href="{% url 'orders' %}" class="button lst_button expand_button">Все заказы</a>
-                <a href="/admin/" class="button lst_button expand_button">Поработать в админ панеле</a>
+                <a href="/admin/" class="button lst_button expand_button">Поработать в админ панели</a>
             </div>
         {% else %}
             <h1>Добро пожаловать! Хороших покупок!</h1>
