--- a/orders/static/orders/css/cart.css
+++ b/orders/static/orders/css/cart.css
@@ -1,7 +1,7 @@
 .card {
   border: none;
   margin-bottom: 1rem;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .card-img {
